--- a/footer.css
+++ b/footer.css
@@ -8,20 +8,21 @@
     font-weight: bolder;
 }
 .footer__link{
-    color: darkgreen; 
+    color: goldenrod; 
     font-weight: bolder; 
 }
 .button{    
     padding: 10px;
-    color: darkgreen;
+    color: black;
     font-weight: bolder;
-    border: 5px groove darkgreen;
-    background-color: #000000;
-    max-width:  200px;
+    font-size: 30px;
+    border: 5px groove rgb(0, 0, 0);
+    background-color: #ffffff;
+    max-width:  300px;
     margin: auto;
     padding: auto;
     text-align: center; 
 }
 .click:hover{
-    background-color: #5acf95;
+    background-color:burlywood;
 }
