--- a/navi.css
+++ b/navi.css
@@ -14,13 +14,14 @@
 .navi__link{
     text-decoration: none;
     font-size: 40px;
-    color:darkgreen;
+    color:rgb(7, 54, 7);
     padding: 5px;
     font-weight: bolder;
-    border: 5px groove darkgreen;
-    background-color:khaki;
+    border: 5px groove rgb(0, 0, 0);
+    background-color:gold;
     max-width:  200px;
     margin: auto;
     padding: auto;
     text-align: center;
+    border-radius: 20%;
 }
