--- a/style.css
+++ b/style.css
@@ -7,15 +7,18 @@
   
 
 .body{
-    background-color: rgb(240, 240, 233);
+    background-color:white ;
     font-family: "Lato", sans-serif;
     text-align: center;
     line-height: 2;
     max-width: 1200px;
     margin:auto;
+    border: 30px solid black;
+    border-radius: 2%;
 }
 .picture{
-    padding: 30px;
+    border: 5px solid black;
+    border-radius: 2%;
 } 
 .body--dark{
     background-color: rgb(0, 0, 0);
