--- a/navi.css
+++ b/navi.css
@@ -18,7 +18,7 @@
     padding: 5px;
     font-weight: bolder;
     border: 5px groove rgb(0, 0, 0);
-    background-color:gold;
+    background-color:rgb(255, 255, 255);
     max-width:  200px;
     margin: auto;
     padding: auto;
