--- a/Css/style.css
+++ b/Css/style.css
@@ -1,29 +1,30 @@
-.html{
-    box-sizing: border-box;
+.html {
+  box-sizing: border-box;
 }
-  *, ::after, ::before{
-       box-sizing: inherit;
+*,
+::after,
+::before {
+  box-sizing: inherit;
 }
-  
 
-.body{
-    background-color:white ;
-    font-family: "Lato", sans-serif;
-    text-align: center;
-    line-height: 2;
-    max-width: 1200px;
-    margin:auto;
+.body {
+  background-color: white;
+  font-family: "Lato", sans-serif;
+  text-align: center;
+  line-height: 2;
+  max-width: 1200px;
+  margin: auto;
 }
-.picture{
-    border: 5px solid black;
-    border-radius: 2%;
-} 
-.body--dark{
-    background-color: rgb(0, 0, 0);
-    font-family: "Lato", sans-serif;
-    text-align: center;
-    line-height: 2;
-    color: aliceblue;
-    max-width: 1200px;
-    margin:auto;
+.picture {
+  border: 5px solid black;
+  border-radius: 2%;
+}
+.body--dark {
+  background-color: rgb(0, 0, 0);
+  font-family: "Lato", sans-serif;
+  text-align: center;
+  line-height: 2;
+  color: aliceblue;
+  max-width: 1200px;
+  margin: auto;
 }
